<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">grabber</string>
    <string name="click2start">Click Start Button to grab</string>
    <string name="btnStart">Start</string>
    <string name="btnStop">Stop</string>
    <string name="btnQuit">Quit</string>
    <string name="deepGrab">DeepGrab</string>
    <string name="btnClean">Clean</string>
    <string name="header4MeiZiTu">Sister figure: jandan.net/ooxx</string>
    <string name="header4MeiNvMen">Beauty door: www.mmeinv.com</string>
    
</resources>